Bug 296000 - Amarok downloads Jamendo music as ogg files
Summary: Amarok downloads Jamendo music as ogg files
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Services/Jamendo (other bugs)
Version First Reported In: 2.5.0
Platform: Gentoo Packages Linux
: NOR major
Target Milestone: 2.6
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-03-14 15:36 UTC by Tomasz Kołosowski
Modified: 2012-03-16 10:49 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tomasz Kołosowski 2012-03-14 15:36:59 UTC
When you order amarok to copy files from Jamendo to local collection without any transcoding it, they have .ogg extension while they seem to be mp3 files.
Comment 1 Myriam Schweingruber 2012-03-14 16:59:41 UTC
Amarok actually downloads *.ogg files from Jamendo AFAIC by default, did you try to play them?
Comment 2 Tomasz Kołosowski 2012-03-14 19:37:16 UTC
Yes, I did try to play them and yes, they work. I guess that Amarok ignores file extensions and reads header instead. Though other apps (like dolphin, for instance) encounter some problems during opening of such file.

Here's a sample I've downloaded just today:

tom@gentoo /home/Music/Butterfly Tea/Fairytales and Dragons $ file 07-Dragon\ Rising.ogg 
07-Dragon Rising.ogg: Audio file with ID3 version 2.4.0, contains: MPEG ADTS, layer III, v1,  96 kbps, 44.1 kHz, JntStereo
Comment 3 Myriam Schweingruber 2012-03-15 09:55:34 UTC
I just tried that myself: you are right, Dolphin shows these files to be mp3 audio and renaming the file to mp3 doesn't cause any problems for playing either.

I change the bug to major as this is a serious flaw and shouldn't happen. It is also misleading as one expect to really get a free format.
Comment 4 Bart Cerneels 2012-03-15 10:16:47 UTC
(In reply to comment #0)
> When you order amarok to copy files from Jamendo to local collection without
> any transcoding it, they have .ogg extension while they seem to be mp3 files.

How do you do the copy? Drag and drop from the playlist or using the download album action in the Jamendo service?
Comment 5 Bart Cerneels 2012-03-15 11:04:17 UTC
Git commit f92faf7fcc3defd6b3732aa63e02bc1f6ec890a0 by Bart Cerneels.
Committed on 15/03/2012 at 12:02.
Pushed by shanachie into branch 'master'.

Switch back to ogg streams for Jamendo, they work.

NOTE: since jamendo has many track options, we should use multi-source.
Can also be used to avoid transcoding.
FIXED-IN: 2.6

M  +1    -0    ChangeLog
M  +2    -3    src/services/jamendo/JamendoXmlParser.cpp

http://commits.kde.org/amarok/f92faf7fcc3defd6b3732aa63e02bc1f6ec890a0
Comment 6 Tomasz Kołosowski 2012-03-15 11:15:18 UTC
(In reply to comment #4)
> (In reply to comment #0)
> > When you order amarok to copy files from Jamendo to local collection without
> > any transcoding it, they have .ogg extension while they seem to be mp3 files.
> 
> How do you do the copy? Drag and drop from the playlist or using the
> download album action in the Jamendo service?

Right click on album in amarok->copy to collection->local collection. Then in popup window that appears i select "No transcoding" (first option).

However given the resolved status i guess i'm late anyway. Thanks guys :)
Comment 7 Bart Cerneels 2012-03-15 12:36:19 UTC
(In reply to comment #4)
> (In reply to comment #0)
> > When you order amarok to copy files from Jamendo to local collection without
> > any transcoding it, they have .ogg extension while they seem to be mp3 files.
> 
Ah, you used an even different method. Does not matter, it calls the same function.

> How do you do the copy? Drag and drop from the playlist or using the
> download album action in the Jamendo service?

You should still try to test by running a git version > v2.5.0-146-gf92faf7 if you can. I did only a little bit of testing and can't be sure I didn't cause regressions or other bugs.

Change was very minimal and it was even disabled on purpose. But you never know.
Comment 8 Tomasz Kołosowski 2012-03-15 17:04:21 UTC
I've just rebuilt Amarok from git repo (commit f92faf7fcc3defd6b3732aa63e02bc1f6ec890a0) and unfortunately i confirm this bug to be still there.
Steps to reproduce:
1. go to Internet->Jamendo
2. Update, if you didn't yet.
3. Pick any album
4. Right click it->Copy to collection->local collection
5. In popup window, select Copy
6. I've set path to Collection root/artist/album/track - title.

After that Amarok still saves files with .ogg extension while they still appear to be mp3 files.

Example: 01-Freyjas Tears 01.ogg: Audio file with ID3 version 2.4.0, contains: MPEG ADTS, layer III, v1,  96 kbps, 44.1 kHz, JntStereo
Comment 9 Bart Cerneels 2012-03-15 20:12:53 UTC
(In reply to comment #8)
> I've just rebuilt Amarok from git repo (commit
> f92faf7fcc3defd6b3732aa63e02bc1f6ec890a0) and unfortunately i confirm this
> bug to be still there.
> Steps to reproduce:
> 1. go to Internet->Jamendo
> 2. Update, if you didn't yet.
> 3. Pick any album
> 4. Right click it->Copy to collection->local collection
> 5. In popup window, select Copy
> 6. I've set path to Collection root/artist/album/track - title.
> 
> After that Amarok still saves files with .ogg extension while they still
> appear to be mp3 files.
> 
> Example: 01-Freyjas Tears 01.ogg: Audio file with ID3 version 2.4.0,
> contains: MPEG ADTS, layer III, v1,  96 kbps, 44.1 kHz, JntStereo

Make sure you've actually installed the jamendo plugin and are using the newer version. The jamendo database might need to be refreshed by clicking the update button.

Quick check: open edit tag dialog, check that location has "streamencoding=ogg2" at the end.

close the bug if you confirm it's fixed.
And thanks for testing.
Comment 10 Tomasz Kołosowski 2012-03-15 22:40:12 UTC
Allright, I've wiped amarok's configuration (removed ~/kde4/share/config/amarok* and ~/kde4/share/apps/amarok, cleaned the database as I use external one), and tried again. Now files downloaded are indeedly ogg but Amarok has troubles with syncinc with Jamendo database in general.
After I clicked update button, first progress bar appeared, then only text "updating the local database" stayed and then the field got empty, but pretty much nothing happen. I had to restart Amarok to get Jamendo section filled, but it's incomplete, many songs are missing.

Should i keep on reporting here or does it deserve seperate bug report?
Comment 11 Bart Cerneels 2012-03-16 08:14:28 UTC
(In reply to comment #10)
> Allright, I've wiped amarok's configuration (removed
> ~/kde4/share/config/amarok* and ~/kde4/share/apps/amarok, cleaned the
> database as I use external one), and tried again. Now files downloaded are
> indeedly ogg but Amarok has troubles with syncinc with Jamendo database in
> general.
> After I clicked update button, first progress bar appeared, then only text
> "updating the local database" stayed and then the field got empty, but
> pretty much nothing happen. I had to restart Amarok to get Jamendo section
> filled, but it's incomplete, many songs are missing.
> 
> Should i keep on reporting here or does it deserve seperate bug report?

No. I believe this one if fixed and you screwed up the jamendo import in the database by quitting Amarok to soon. It does indeed take a while and does not report progress. This is caused by a design issue of the Jamendo service and can't be solved with out a big rewrite.
Comment 12 Tomasz Kołosowski 2012-03-16 10:49:24 UTC
D'oh, after waiting a few minutes it works. Thanks for the tip. However I'm quite sure that in non-git version progress bar worked just fine...