Switch back to ogg streams for Jamendo, they work.

NOTE: since jamendo has many track options, we should use multi-source.
Can also be used to avoid transcoding.

BUG: 296000
FIXED-IN: 2.6