src/services/jamendo/JamendoXmlParser.cpp
@@ -387,9 +387,8 @@ JamendoXmlParser::readTrack()
         }
     }
 
-    //FIXME: temp workaround for bug 221922. Remove if Jamendo fixes their redirects
-    //static const QString previewUrl = "http://api.jamendo.com/get2/stream/track/redirect/?id=%1&streamencoding=ogg2";
-    static const QString previewUrl = "http://api.jamendo.com/get2/stream/track/redirect/?id=%1";
+    static const QString previewUrl =
+        "http://api.jamendo.com/get2/stream/track/redirect/?id=%1&streamencoding=ogg2";
 
     JamendoTrack currentTrack( name );
     currentTrack.setId( id.toInt() );
